TheKabal (25 May 2013)
--------------------------------------
Create universe - Initial (step 0) gives feedback if you enter the wrong password
Create universe - Steps after 0 includes the submit button in the table
Create universe - Warning message should be above (not below) the confirm in step 2
Create universe - All output is now language file driven (translatable)
Create universe - Steps 6 and 7 have benchmark timings for all items
Create universe - Initial (step 0) should show same table based design

TheKabal (19 May 2013)
--------------------------------------
Create Universe step 5 & 6 translation

TheKabal (19 May 2013)
--------------------------------------
Fix BntSchema so that it returns an array only (no direct output)
Fix Create universe output function table_row & table_row_xml to correctly show the full error message on rows with errors (table title row was incorrectly using double quotes which broke html)
Begin converting Create Universe to use translated text.
Fix BntFile so that in Create Universe on step 5, it imports the registry correctly. The DB is set to active (but empty) at that point.

TheKabal (18 May 2013)
--------------------------------------
Switch all instances of Select with a limit clause to use adodb's SelectLimit
PostgreSQL's adodb driver doesn't support logging (yet), so disable logging (even in dev mode) if the property doesn't exist.
When the database was active, the registry ($config_values, generally) was not being populated (fixed).

TheKabal (13 May 2013)
--------------------------------------
BntFile was incorrectly reporting its error status, and the config file had booleans, which BntFile was not importing correctly. Switched them to 0/1 for false/true, which now work correctly.
Game config's schema had a column for description, but it was not used, and was set to not null, which caused errors
Scheduler "repeate" changed to "repeat" for clarity